<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_initiated_routes"
            android:icon="@drawable/baseline_route_24"
            android:title="@string/menu_initiated_routes" />
        <item
            android:id="@+id/nav_tourist_card"
            android:icon="@drawable/baseline_credit_card_24"
            android:title="@string/menu_tourist_card" />
        <item
            android:id="@+id/nav_badging"
            android:icon="@drawable/baseline_military_tech_24"
            android:title="@string/menu_badging" />
        <item
            android:id="@+id/nav_scoreboard"
            android:icon="@drawable/baseline_scoreboard_24"
            android:title="@string/menu_scoreboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/menu_login" />
    </group>
</menu>
