<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.touristcard.TouristCardFragment">

    <LinearLayout
        android:id="@+id/gems_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:layout_marginBottom="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/xxlarge_font_size"
            android:textStyle="bold|italic" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/gems_animation"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lottie/28399-discovered-treasure.json"
            app:lottie_loop="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/gems_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/tip"
            android:src="@drawable/baseline_lightbulb_24"
            android:tooltipText="@string/tip_gems"
            app:backgroundTint="@color/yellow"
            app:fabSize="mini" />
    </LinearLayout>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/border_primary_variant"
        android:contentDescription="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gems_container"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
</androidx.constraintlayout.widget.ConstraintLayout>
