<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.route.RouteFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/fragment_horizontal_margin"
            android:paddingVertical="@dimen/fragment_vertical_margin">

            <ImageView
                android:id="@+id/route_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/border_primary_variant"
                android:contentDescription="@string/route_image"
                app:layout_constraintBottom_toTopOf="@+id/route_name"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/xlarge_font_size"
                app:layout_constraintBottom_toTopOf="@id/route_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_image" />

            <TextView
                android:id="@+id/route_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_primary_variant"
                android:padding="@dimen/text_margin"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/medium_font_size"
                app:layout_constraintBottom_toTopOf="@id/pois_list_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_name" />

            <TextView
                android:id="@+id/pois_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/pois_list_label"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/xlarge_font_size"
                app:layout_constraintBottom_toTopOf="@id/pois_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pois_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pois_list_label"
                tools:listitem="@layout/fragment_pois_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/start_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/start_route"
        android:src="@drawable/baseline_tour_24"
        android:tooltipText="@string/start_route"
        android:visibility="gone"
        app:backgroundTint="?attr/colorPrimary"
        app:fabCustomSize="72dp"
        app:maxImageSize="48dp"
        app:rippleColor="@color/black_overlay"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
